Envbuilder gonna build

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,12 +4,17 @@ driver:
 
 provisioner:
   name: chef_zero
+  data_bags_path: test/data_bags
+  environments_path: test/environments
 
 platforms:
   - name: ubuntu-14.04
 
 suites:
   - name: production
+    provisioner:
+      client_rb:
+        environment: services-manager-prod
     run_list:
       - recipe[chef_services_manager::default]
     attributes:
